--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "salesforce-app",
+  "name": "lwc-scheduler",
   "private": true,
   "version": "1.0.0",
   "description": "Salesforce App",
@@ -21,5 +21,16 @@
     "eslint": "^5.16.0",
     "prettier": "^1.19.1",
     "prettier-plugin-apex": "^1.0.0"
-  }
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/schandlergarcia/lwc-scheduler-service.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/schandlergarcia/lwc-scheduler-service/issues"
+  },
+  "homepage": "https://github.com/schandlergarcia/lwc-scheduler-service#readme"
 }
